Feature/add cicd (#6)
Add Continous Integration