@@ -1,12 +1,15 @@
 plugins {
 	id 'java'
 	id 'groovy'
+	id 'jacoco'
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.2'
 	id 'org.hidetake.swagger.generator' version '2.18.2'
+	id "org.sonarqube" version "2.8"
 }
 
-group = 'com.github.mwierzchowski'
+group = 'com.github.mwierzchowski.helios'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.13'
 targetCompatibility = '1.13'
@@ -19,6 +22,9 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	swagerUiBundle {
+		transitive = false
+	}
 }
 
 repositories {
@@ -30,7 +36,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
+	// Swagger
 	swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.18'
+	swagerUiBundle 'org.webjars:swagger-ui:3.25.1'
 
 	// Compilation
 	compileOnly 'org.projectlombok:lombok'
@@ -66,6 +75,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
+// External services clients generation
 def specsDir = 'src/main/specs'
 def owmClientPackage = "org.openweathermap"
 def sunapiClientPackage = "org.sunrisesunset"
@@ -106,11 +116,35 @@ compileJava.dependsOn swaggerSources.sunapi.code
 sourceSets.main.java.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDirs += "${swaggerSources.sunapi.code.outputDir}/src/main/resources"
 
-// todo maybe this can be removed as build is not silent anyway
-test {
-	// Workaround for https://github.com/gradle/gradle/issues/6725
-	// Should be removed when Gradle switch to Groovy 3
-	jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
-	jvmArgs('--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED')
-	jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
+// Open-API and Swagger UI
+def openApiDir = file("$sourceSets.main.output.resourcesDir/static")
+resolve {
+	openApiFile = file("$project.rootDir/openapi.yaml")
+	outputDir = openApiDir
+	classpath = sourceSets.main.runtimeClasspath
+	resourcePackages = [project.group.toString()]
+	prettyPrint = true
+	outputFormat = 'JSON'
+}
+task addSwaggerUi(type: Copy) {
+	from zipTree(configurations.swagerUiBundle.singleFile).matching {
+		include "/META-INF/resources/webjars/swagger-ui/**/*.*"
+		eachFile {
+			it.relativePath = new RelativePath(true, it.relativePath.segments.drop(5))
+		}
+		includeEmptyDirs = false
+	}
+	into openApiDir
+	filter {
+		it.replaceAll('https://petstore.swagger.io/v2/swagger.json', 'openapi.json')
+	}
+	addSwaggerUi.dependsOn resolve
+}
+tasks.jar.dependsOn addSwaggerUi
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		html.enabled false
+	}
 }
